<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one
  ~ or more contributor license agreements.  See the NOTICE file
  ~ distributed with this work for additional information
  ~ regarding copyright ownership.  The ASF licenses this file
  ~ to you under the Apache License, Version 2.0 (the
  ~ "License"); you may not use this file except in compliance
  ~ with the License.  You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.apache.sedona</groupId>
        <artifactId>sedona-parent</artifactId>
        <version>1.8.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <artifactId>sedona-common</artifactId>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>A cluster computing system for processing large-scale spatial data: Common API.</description>
    <url>http://sedona.apache.org/</url>
    <packaging>jar</packaging>

    <properties>
        <maven.deploy.skip>${skip.deploy.common.modules}</maven.deploy.skip>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-main</artifactId>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-referencing</artifactId>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-epsg-hsql</artifactId>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-geotiff</artifactId>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-arcgrid</artifactId>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-process-feature</artifactId>
        </dependency>
        <dependency>
            <groupId>org.locationtech.jts</groupId>
            <artifactId>jts-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wololo</groupId>
            <artifactId>jts2geojson</artifactId>
        </dependency>
        <dependency>
            <groupId>org.locationtech.spatial4j</groupId>
            <artifactId>spatial4j</artifactId>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>com.google.geometry</groupId>-->
<!--            <artifactId>s2-geometry</artifactId>-->
<!--        </dependency>-->
        <dependency>
            <groupId>org.datasyslab</groupId>
            <artifactId>s2-geometry-library</artifactId>
            <version>20250620-rc1</version>
        </dependency>
        <dependency>
            <groupId>com.uber</groupId>
            <artifactId>h3</artifactId>
        </dependency>
        <dependency>
            <groupId>com.esotericsoftware</groupId>
            <artifactId>kryo</artifactId>
        </dependency>
        <dependency>
            <groupId>net.sf.geographiclib</groupId>
            <artifactId>GeographicLib-Java</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
        </dependency>
        <dependency>
            <groupId>it.geosolutions.jaiext.jiffle</groupId>
            <artifactId>jt-jiffle-language</artifactId>
        </dependency>
        <dependency>
            <groupId>edu.ucar</groupId>
            <artifactId>cdm-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.4</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <!-- Skip running resolved-pom-maven-plugin since shade will
                     generate dependency reduced pom which substitutes property
                     values. resolved-pom-maven-plugin will break pom
                     installation when working with maven-shade-plugin.  -->
                <groupId>io.paradoxical</groupId>
                <artifactId>resolved-pom-maven-plugin</artifactId>
                <version>1.0</version>
                <executions>
                    <execution>
                        <id>resolve-my-pom</id>
                        <phase>none</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <!--
                  We need to shade jiffle and its antlr and janino dependencies for the following reasons:

                  1. Databricks runtime uses an older version of janino (3.0.16) that does not work
                     with jiffle in Spark repl. See https://github.com/apache/sedona/discussions/1945

                  2. Spark 4 uses an incompatible version of antlr at runtime.
                -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <artifactSet>
                                <includes>
                                    <include>it.geosolutions.jaiext.jiffle:*</include>
                                    <include>org.antlr:*</include>
                                    <include>org.codehaus.janino:*</include>
                                    <include>org.datasyslab:s2-geometry-library</include>
                                </includes>
                            </artifactSet>
                            <relocations>
                                <relocation>
                                    <pattern>it.geosolutions.jaiext.jiffle</pattern>
                                    <shadedPattern>org.apache.sedona.shaded.jiffle</shadedPattern>
                                    <excludes>
                                        <exclude>it.geosolutions.jaiext.jiffle.runtime.*</exclude>
                                    </excludes>
                                </relocation>
                                <relocation>
                                    <pattern>org.antlr.v4.runtime</pattern>
                                    <shadedPattern>org.apache.sedona.shaded.antlr</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.codehaus</pattern>
                                    <shadedPattern>org.apache.sedona.shaded.codehaus</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.google.common.geometry;</pattern>
                                    <shadedPattern>org.apache.sedona.shaded.s2</shadedPattern>
                                </relocation>
                            </relocations>
                            <filters>
                                <!--  filter to address "Invalid signature file" issue - see http://stackoverflow.com/a/6743609/589215 -->
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
